--- a/tp2_ancine.html
+++ b/tp2_ancine.html
@@ -7552,7 +7552,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Os dados utilizados foram retirados do <a href="https://dados.gov.br/dados/conjuntos-dados/crt-obras-nao-publicitarias-registradas">portal de dados</a> do governo federal. O conjunto de dados selecionado contém informações como nome, tipo, país de origem e requerente de obras não publicitárias registradas pela Ancine entre 2014 e novembro de 2025.</p>
+<p>Os dados utilizados foram retirados do <a href="https://dados.gov.br/dados/conjuntos-dados/crt-obras-nao-publicitarias-registradas">portal de dados</a> do governo federal. O conjunto de dados selecionado contém informações como nome, tipo, país de origem e requerente de obras não publicitárias registradas pela Ancine entre 2005 e novembro de 2025.</p>
 </div>
 </div>
 </div>
@@ -9835,22 +9835,9 @@ Cada consulta apresenta uma explicação textual, seguida do comando SQL e do bl
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h3 id="Finaliza%C3%A7%C3%A3o-do-ambiente">Finalização do ambiente<a class="anchor-link" href="#Finaliza%C3%A7%C3%A3o-do-ambiente">¶</a></h3>
-</div>
-</div>
-</div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs">
-<div class="jp-Cell-inputWrapper" tabindex="0">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [10]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-<div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="n">cur</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
-<span class="n">conn</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
-</pre></div>
-</div>
+<p>Gabriel Zanotelli - 10</p>
+<p>Yaggo Teixeira - 10</p>
+<p>Cayo Guzansky - 10</p>
 </div>
 </div>
 </div>
